Add package.json and command-line development server

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
           "@type": "Person",
           "name": "Chris Wolfe"
         },
-        "copyrightYear": 2019,
+        "copyrightYear": 2019
       }
     </script>
     <script type="module" src="/lib/page.js"></script>
