--- a/examples/index.html
+++ b/examples/index.html
@@ -15,7 +15,7 @@
         "copyrightYear": 2019
       }
     </script>
-    <script type="module" src="/lib/page.js"></script>
+    <script type="module" data-build src="/lib/page.js"></script>
   </head>
   <body>
     <main>
