--- a/examples/index.html
+++ b/examples/index.html
@@ -2,20 +2,10 @@
   <head>
     <script type="application/ld+json">
       {
-        "headline": "Minimal Magic Examples",
-        "image": {
-          "@type": "ImageObject",
-          "contentUrl": "/logo.svg"
-        },
-        "inLanguage": "en",
-        "copyrightHolder": {
-          "@type": "Person",
-          "name": "Chris Wolfe"
-        },
-        "copyrightYear": 2019
+        "headline": "Minimal Magic Examples"
       }
     </script>
-    <script type="module" data-build src="/lib/page.js"></script>
+    <script type="module" data-build src="/layout.js"></script>
   </head>
   <body>
     <main>
