--- a/examples/01-hello/index.html
+++ b/examples/01-hello/index.html
@@ -15,17 +15,17 @@
         "description": "A very simple example of a minimal-magic page"
       }
     </script>
-    <link rel="stylesheet" href="/layout.css" />
+    <link rel="stylesheet" href="../../layout.css" />
   </head>
   <body>
     <header class="site">
-      <img src="/logo.svg" alt="" />
+      <img src="../../logo.svg" alt="" />
       <div>
         <h1>Minimal Magic</h1>
         <nav>
           <ul class="hslash">
-            <li><a href="/">Home</a></li>
-            <li><a href="/examples/">Examples</a></li>
+            <li><a href="../../">Home</a></li>
+            <li><a href="../">Examples</a></li>
           </ul>
         </nav>
       </div>
