--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script type="application/ld+json">
       {}
     </script>
-    <link rel="stylesheet" href="/layout.css" />
+    <link rel="stylesheet" href="layout.css" />
   </head>
   <body>
     <header class="site">
-      <img src="/logo.svg" alt="" />
+      <img src="logo.svg" alt="" />
       <div><h1>Minimal Magic</h1></div>
     </header>
     <main>
