--- a/examples/index.html
+++ b/examples/index.html
@@ -9,16 +9,16 @@
         "headline": "Examples"
       }
     </script>
-    <link rel="stylesheet" href="/layout.css" />
+    <link rel="stylesheet" href="../layout.css" />
   </head>
   <body>
     <header class="site">
-      <img src="/logo.svg" alt="" />
+      <img src="../logo.svg" alt="" />
       <div>
         <h1>Minimal Magic</h1>
         <nav>
           <ul class="hslash">
-            <li><a href="/">Home</a></li>
+            <li><a href="../">Home</a></li>
           </ul>
         </nav>
       </div>
