Update for 468a5ecc510f

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,8 +25,15 @@
     </header>
     <main>
       <header class="page"><h2>Examples</h2></header>
-      <ul>
-        <li><a href="01-hello/">Hello World</a></li>
+      <ul id="examples-list">
+        <li>
+          <a href="hello/">Hello World</a>
+          <p>A very simple example</p>
+        </li>
+        <li>
+          <a href="scripts/">Scripts</a>
+          <p>Introducing build-time scripts</p>
+        </li>
       </ul>
     </main>
     <footer class="site">
