Update for ba056635ec76

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,6 +34,10 @@
           <a href="scripts/">Scripts</a>
           <p>Introducing build-time scripts</p>
         </li>
+        <li>
+          <a href="links/">Links</a>
+          <p>Linked resources are automatically copied</p>
+        </li>
       </ul>
     </main>
     <footer class="site">
