--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </p>
       <p>
         More documentation is coming soon. For the moment, check out the
-        <a href="examples">examples</a> and
+        <a href="examples/">examples</a> and
         <a href="https://github.com/crlfe/minimal-magic">github</a>.
       </p>
     </main>
